--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ django-environ==0.11.2
 gunicorn==21.2.0
 packaging==23.2
 psycopg2==2.9.9
+psycopg2-binary==2.9.9
+pytz==2024.1
 sqlparse==0.4.4
 typing_extensions==4.9.0
 tzdata==2023.4
